2005-06-29  Timothy Brownawell  <tbrownaw@gmail.com>

	* pcdv.{cc,hh}: many changes, including adding test code.
	Does not work properly on test code.
	* commands.cc: pcdv runs new test code first
	* contrib/monoprof.sh: pcdv test uses different file now

2005-06-27  Timothy Brownawell  <tbrownaw@gmail.com>

	* new files: pcdv.{cc,hh}
	* commands.cc: move precise-cdv to it's own file, even though
	memory usage is not yet fixed.
	* Makefile.am: add pcdv.{cc,hh} to sources list

2005-06-27  Timothy Brownawell  <tbrownaw@gmail.com>

	* commands.cc: living_status::merge was missing a line.
	* contrib/monoprof.sh: add profile test for pcdv

2005-06-16  Timothy Brownawell  <tbrownaw@gmail.com>

	* commands.cc: Beginnings of precise-cdv merge, as "pcdv" command.
	(Translation of Python reference implementation posted to Revctrl.)
	Will be moved to a more appropriate home once it works (currenty
	has insane memory usage).

2005-06-05  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc, netcmd.cc: Style cleanups (mostly whitespace).

2005-06-04  Timothy Brownawell  <tbrownaw@gmail.com>

	* netsync.cc (process_hello_cmd): Warn about collection/regex
	usage when talking to an old server.

2005-06-04  Derek Scherger  <derek@echologic.com>

	* commands.cc (update): update MT/work based on the changes
	between the chosen revision and the new merge revision
	* tests/t_update_with_pending_drop.at: 
	* tests/t_update_with_pending_add.at: 
	* tests/t_update_with_pending_rename.at: un-XFAIL and clean up now
	that things work

2005-06-04  Timothy Brownawell  <tbrownaw@gmail.com>

	* netcmd.{cc,hh}, netsync.cc: Move {read,write}_*_cmd_payload
	to netcmd::{read,write}_*_cmd .
	* netcmd.cc, netsync.cc: Compatibility infrastructure.
	* netsync.cc: Interoperate with v4 servers.

2005-06-03  Timothy Brownawell  <tbrownaw@gmail.com>

	* automate.cc (print_some_output): Fix compiler warning.

2005-06-04  Derek Scherger  <derek@echologic.com>
